--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.8+4
   intl: ^0.18.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
   flutter_lints: ^2.0.0
 
@@ -27,9 +34,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
 
 
